--- a/media/styles/custom-jquery-ui.css
+++ b/media/styles/custom-jquery-ui.css
@@ -1,4 +1,32 @@
 
+.ui-acordion {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.ui-accordion-header {
+    font-size: 10pt;
+    display: block;
+    padding: 5pt 10pt;
+    color: #464646;
+    border: 1px solid #AAA;
+    box-shadow: 1px 1px 3px #C0C0C0, -1px -1px 3px #C0C0C0;
+}
+
+.ui-accordion-header-active {
+    
+}
+
+.ui-accordion-icons {
+    //padding: 0 !important;
+}
+
+.ui-accordion .ui-accordion-content {
+	padding: 0 !important;
+	border-top: 0;
+	overflow: auto;
+}
+
 .ui-tabs-nav {
     background-color: #0080C0;
 
